== 0.0.9

* Features

  * Introduced Bliss::Format, which linked to a Bliss::Parser are checked during parsing process. They are defined with a bunch of specs given as YAML.
  * added support for Gzip (content type is autodetected).
  * on_max_unhandled_bytes callback block. Which receives the amount of bytes and a block to execute when that limit is reached.
  * on_tag_close maybe used without a specific tag name, and block now handles "current depth" array.
  * Featuring changelog.

* Bugfixes

  * When XML is too small, it ended through http.callback block, and did not closed the file. That lead to errors and is fixed in this version.